2002-10-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc (on_exec_search): If there was an error in
	the regex, move the Gtk::Entry cursor to the character reported
	by Pcre::Error::offset().

2002-10-27  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.{cc,h} (int_to_string): New function.

	* src/mainwindow.cc (on_exec_search): Show an error dialog if
	there is an error in the regex.

2002-10-27  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc (on_select_folder): Hide the file selection
	pane in the Gtk::FileSelection dialog, since we only need the
	directory part.

2002-10-27  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.{cc,h} src/prefdialog.cc: Get rid of
	ascii_toupper() and AsciiToupper because I just added the
	formerly missing Glib::Ascii::toupper() to glibmm :-P

2002-10-27  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.h (AsciiToupper): New unary predicate that
	forwards to ascii_toupper().

	* src/prefdialog.cc (on_entry_fallback_activate): Use the
	AsciiToupper predicate so that the call can be inlined.

2002-10-27  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.{cc,h} (ascii_toupper): Make this utility function
	publically available.

	* src/prefdialog.cc (on_entry_fallback_activate): Convert the
	encoding name to upper case.

2002-10-27  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.{cc,h}: Explicitely delete the preferences dialog
	on exit.  Although this isn't really necessary, it does look neater
	if we have a lot of cleanup to do on exit.

2002-10-27  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filebuffer.cc (find_matches): Correctly forward one character
	rather than one byte after matching the empty string twice.  Also,
	improve cancellation response by moving the signal_pulse() emission
	into the inner loop (shouldn't harm performance since we emit only
	once for 128 iterations anyway).
