@@ -1,5 +1,12 @@
 2002-10-28  Daniel Elstner  <daniel.elstner@gmx.net>
 
+	* src/stringutils.h: Introduce next() and prev() templates,
+	shamelessly stolen from boost.
+
+	* src/mainwindow.cc (on_exec_search): Use Util::next().
+
+2002-10-28  Daniel Elstner  <daniel.elstner@gmx.net>
+
 	* src/mainwindow.cc (on_exec_search): If there was an error in
 	the regex, move the Gtk::Entry cursor to the character reported
 	by Pcre::Error::offset().
